Fixed a typo and added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             letter
             at a time with a total of 8 guesses.</p>
           <p class="skills"><em>Skills: JS, Responsive Design, DOM Manipulation, Loops, APIs</em></p>
-          <button onclick="window.open(`https://maggie-mcdonald.github.io/guess-the-word/`);">Live
+          <button onclick="open(`https://maggie-mcdonald.github.io/guess-the-word/`);">Live
             Site</button>
           <button onclick="window.open(`https://github.com/maggie-mcdonald/guess-the-word`);">Github
             Repo</button>
@@ -129,7 +129,7 @@
             style="width:100%; height: 100%; border:0; border-radius: 4px; overflow:hidden;"
             title="L12 - Build Your Big Component - Help (forked)"
             allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-scripts allow-same-origin "></iframe>
           <a href="#"><img src="img/sitcky-note-app.png" title="Super Sticky Notes App"></a>
         </div>
         <div class="project-info">
@@ -137,7 +137,7 @@
             notes
             that are saved to local storage.</p>
           <p class="skills"><em>Skills: React.JS, JSX, CSS3, Lifecycle Methods</em></p>
-          <button onclick="window.open(`https://cjzrq0.csb.app/`);">Live Site</button>
+          <button onclick="window.open(`https://codesandbox.io/s/super-sticky-notes-forked-3v6czj`);">Live Site</button>
           <button
             onclick="window.open(`https://codesandbox.io/s/l12-build-your-big-component-help-forked-cjzrq0`);">Code
             Sandbox</button>
@@ -146,12 +146,12 @@
 
 
       <div class="project-container">
-        <h3>Project: Github Repo Gallery</h3>
+        <h3>Project: GitHub Repo Gallery</h3>
         <div class="live-version">
-          <a href="#"><img src="img/github-repo-gallery.png" title="Github Repo Gallery"></a>
+          <a href="#"><img src="img/github-repo-gallery.png" title="GitHub Repo Gallery"></a>
           <!--live version of the repo-->
           <iframe class="responsive-iframe" src="https://maggie-mcdonald.github.io/github-repo-gallery/"
-            title="Github Repo Gallery">
+            title="GitHub Repo Gallery">
           </iframe>
         </div>
         <div class="project-info">
